fix small screen y overflow

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -581,7 +581,7 @@ Tablet Styles
 /* Mobile Styles */
 @media screen and (max-width: 600px) {
     *{
-		overflow: hidden;
+		/* overflow: hidden; */
 
     }
 
